<resources>

    <plurals name="num_moves">
        <item quantity="zero">0 moves</item>
        <item quantity="one">1 move</item>
        <item quantity="other">%d moves</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">0 hours</item>
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">0 minutes</item>
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="zero">0 seconds</item>
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="hours_short">
        <item quantity="other">%d h</item>
    </plurals>
    <plurals name="minutes_short">
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="seconds_short">
        <item quantity="other">%d s</item>
    </plurals>
    <plurals name="delete_games">
        <item quantity="one">Delete selected game?</item>
        <item quantity="other">Delete selected games?</item>
    </plurals>
    <plurals name="n_items_selected">
        <item quantity="zero">0 items selected</item>
        <item quantity="one">1 item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <plurals name="n_games_selected">
        <item quantity="zero">0 games selected</item>
        <item quantity="one">1 game selected</item>
        <item quantity="other">%d games selected</item>
    </plurals>
    <plurals name="delete_selected_games">
        <item quantity="one">Delete selected game?</item>
        <item quantity="other">Delete selected games?</item>
    </plurals>

    <string name="app_name">N-Puzzle</string>
    <string name="could_not_load_image">Could not load the image</string>
    <string name="could_not_load_default_image">Could not load the default image</string>
    <string name="new_game">New game</string>
    <string name="settings">Settings</string>
    <string name="replay_game">Replay game</string>
    <string name="images_location">Images location</string>
    <string name="general_settings">General settings</string>
    <string name="folder_back">Back</string>
    <string name="empty_directory">There are no files in this directory</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all_from_directory">Unselect all from this directory</string>
    <string name="unselect_all">Unselect all selected files/directories</string>
    <string name="go_to">Go to</string>
    <string name="file_system_root">Root of file system</string>
    <string name="sd_card">SD card</string>
    <string name="pick_files">Pick files</string>
    <string name="load_game">Load game</string>
    <string name="no_image_selected_for_puzzle_images">No image selected for puzzle images</string>
    <string name="gallery_selected_for_puzzle_images">Gallery selected for puzzle images</string>
    <string name="custom_directory_selected_for_puzzle_images">Custom directory %s selected for puzzle images</string>
    <string name="select_location_puzzle_images">Select location of puzzle images</string>
    <string name="new_game_difficulty">New game difficulty</string>
    <string name="puzzle_size">Puzzle size</string>
    <string name="could_not_save_game">Could not save the game</string>
    <string name="could_not_save_finished_game">Could not save the finished game</string>
    <string name="could_not_update_game">Could not update the game</string>
    <string name="game_started_on">Started on %s</string>
    <string name="hour_min_sec_duration">%1$d h %2$d min %3$d s</string>
    <string name="delete">Delete</string>
    <string name="select_games">Select games</string>
    <string name="could_not_load_game">Could not load the game</string>
    <string name="loading">Loading…</string>
    <string name="no_games_available">No games available</string>
    <string name="change_image">Change image</string>
    <string name="no_image">No image</string>
    <string name="pick_image_from_gallery">Pick image from gallery</string>
    <string name="pick_image_from_directory">Pick image from directory</string>
    <string name="random_image_from_selected_location">Random image from selected location</string>
    <string name="rotate">Rotate</string>
    <string name="resign">Resign</string>
    <string name="solve">Solve</string>
    <string name="resign_game_question">Resign from game?</string>
    <string name="resign_game_confirmation">Are you sure you want to resign from this game? The game will be deleted and unrecoverable.</string>
    <string name="puzzle_solved">Puzzle solved</string>
    <string name="number_of_moves">Number of moves</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="stay_in_current_game_question">Do you want to stay in the current game?</string>
    <string name="could_not_load_puzzle_image">Could not load the puzzle\'s image</string>
    <string name="loading_image">Loading image</string>
    <string name="game_statistics">Game statistics</string>
    <string name="solve_game_question">Solve game?</string>
    <string name="solve_game_confirmation">Do you want to solve this game? It may take a while.</string>

</resources>