<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuItemRotateImage"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_rotate"
        android:title="@string/rotate"/>
    <item
        android:id="@+id/menuItemResignGame"
        android:showAsAction="never"
        android:title="@string/resign"
        />
    <item
        android:id="@+id/menuItemChangeImage"
        android:showAsAction="never"
        android:title="@string/change_image">
        <menu>
            <item
                android:id="@+id/menuItemNoImage"
                android:showAsAction="never"
                android:title="@string/no_image"/>
            <item
                android:id="@+id/menuItemRandomImageFromSelectedLocation"
                android:showAsAction="never"
                android:title="@string/random_image_from_selected_location"/>
            <item
                android:id="@+id/menuItemPickImageFromGallery"
                android:showAsAction="never"
                android:title="@string/pick_image_from_gallery"/>
            <item
                android:id="@+id/menuItemPickImageFromDirectory"
                android:showAsAction="never"
                android:title="@string/pick_image_from_directory"/>
        </menu>
    </item>

</menu>