<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/npuzzle_main_screen_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/loadGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_game" />

        <Button
            android:id="@+id/replayGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/replay_game" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

</LinearLayout>